Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4677

qMake requires TARGET.UID3 to be specified in a .pro file when ICON is used - or it will fail

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.6.0
    • 4.6.0
    • Build tools: qmake
    • None
    • 952f0ca3f371b040bd8b8a007cdf87bf0e4843ad ; 05e956d5c7d5c39bee332972ce54fea71c15d24b

      • in a .pro file, add: ICON = my.svg
      • run qmake
      • it fails: "TARGET.UID3 etc.."

      The proper behavior here is to use the generated UID3 as filename for the .mif file generated. This needs to be fixed in mkspecs\features\symbian\application_icon.prf. We don't require an explicit UID3 set for running "make sis" so why on earth would one be required when ICON is defined.

      Once this is fixed, commit 9711987fb0ba2841016dd75c1f3a3d2276b8cc69 should be fixed to NOT check for isEmpty in the symbianpkgrules.pri files.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0101981 Janne Anttila
            riskedal Espen Riskedal (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes