Changed MIF filename from UID to target name in Symbian.

This change makes it possible to define ICON keyword in pro file
without UID3.

It is safe to use target as an icon name since Symbian devices cannot
have two different binaries with the same name as all binaries are
located in \sys\bin. This means there cannot be also two mif files
with same target name. Also all native S60 apps use target name as an
MIF basename. Target name is also much easier to associate with app
than UID.

Task-number: QTBUG-4677
Reviewed-by: Miikka Heikkinen
(cherry picked from commit 952f0ca3f371b040bd8b8a007cdf87bf0e4843ad)