qmake/generators/symbian/symmake.h
@@ -99,7 +99,7 @@ protected:
     void checkOverridability(QStringList &overridableKeywords, QString &checkString);
 
     void writeHeader(QTextStream &t);
-    void writeBldInfContent(QTextStream& t, bool addDeploymentExtension);
+    void writeBldInfContent(QTextStream& t, bool addDeploymentExtension, const QString &iconFile);
 
     static bool removeDuplicatedStrings(QStringList& stringList);
 
@@ -143,7 +143,7 @@ protected:
     void generateDistcleanTargets(QTextStream& t);
 
     // Subclass implements
-    virtual void writeBldInfExtensionRulesPart(QTextStream& t) = 0;
+    virtual void writeBldInfExtensionRulesPart(QTextStream& t, const QString &iconTargetFile) = 0;
     virtual void writeBldInfMkFilePart(QTextStream& t, bool addDeploymentExtension) = 0;
     virtual void writeMkFile(const QString& wrapperFileName, bool deploymentOnly) = 0;
     virtual void writeWrapperMakefile(QFile& wrapperFile, bool isPrimaryMakefile) = 0;
