qmake/generators/symbian/symmake_sbsv2.cpp
@@ -238,7 +238,7 @@ void SymbianSbsv2MakefileGenerator::writeWrapperMakefile(QFile& wrapperFile, boo
     }
 }
 
-void SymbianSbsv2MakefileGenerator::writeBldInfExtensionRulesPart(QTextStream& t)
+void SymbianSbsv2MakefileGenerator::writeBldInfExtensionRulesPart(QTextStream& t, const QString &iconTargetFile)
 {
     // Makes sure we have needed FLMs in place.
     exportFlm();
@@ -379,9 +379,12 @@ void SymbianSbsv2MakefileGenerator::writeBldInfExtensionRulesPart(QTextStream& t
         QString iconPath = iconInfo.path();
         QString iconFile = iconInfo.baseName();
 
+        QFileInfo iconTargetInfo = fileInfo(iconTargetFile);
+        QString iconTarget = iconTargetInfo.fileName();
+
         t << "OPTION SOURCES -c32 " << iconFile << endl;
         t << "OPTION SOURCEDIR " << iconPath << endl;
-        t << "OPTION TARGETFILE " << uid3 << ".mif" << endl;
+        t << "OPTION TARGETFILE " << iconTarget << endl;
         t << "OPTION SVGENCODINGVERSION 3" << endl; // Compatibility with S60 3.1 devices and up
         t << "END" << endl;
     }
